css: fix uneven padding around the landing page cover image.
It felt off.

--- a/css/m-light.compiled.css
+++ b/css/m-light.compiled.css
@@ -788,7 +788,7 @@ article section > h4 a, article section > h5 a, article section > h6 a {
   color: #ffffff;
 }
 #m-landing-cover {
-  padding-bottom: 6rem;
+  padding-bottom: 7rem;
   margin-bottom: -3rem;
 }
 article#m-jumbo {
